# Whippet

./: .gitignore  README.md  pyproject.toml  whippet.py
tests/: test_load_order.py  test_v3_legacy.py
tests/fixtures/order_dependent/: a_groups.json  b_computers.json  c_domains.json  z_users.json
tests/fixtures/v3_legacy/: 20200101000000_domains.json  20200101000000_groups.json  20200101000000_users.json
whippet/: __init__.py  cli.py  constants.py  graph.py  loader.py  queries.py  report.py
whippet/web/: __init__.py  server.py
whippet/web/static/: app.js  index.html  style.css
