[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "whippet-ad"
version = "0.2.0"
description = "A lean, fast in-memory Active Directory graph pathfinder — the lightweight sibling to BloodHound."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["active-directory", "bloodhound", "sharphound", "pentest", "graph", "attack-path"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Environment :: Console",
]
# Core tool is pure standard library — no required dependencies.
dependencies = []

[project.optional-dependencies]
# Optional fast C-backed graph mirror for bulk-analysis queries.
fast = ["igraph>=0.10"]
# Optional in-browser visualizer / GUI (`whippet ... --serve`).
web = ["flask>=3.0"]

[project.scripts]
whippet = "whippet.cli:main"

[tool.setuptools]
packages = ["whippet", "whippet.web"]

[tool.setuptools.package-data]
"whippet.web" = ["static/*"]
